slurm-277.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun2.py", line 109
    model.add(Dropout({{uniform(0, 1)}}))
        ^
SyntaxError: invalid syntax
